Fixed bug. Now forward slash on keyboard can be pressed to use division on calc app

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button data-key="KeyC" type="button" class="operator" id="ac">AC</button>
         <button data-key="KeyN" type="button" class="operator" id="negative">+/-</button>
         <button data-key="KeyPercent" type="button" class="operator" id="modulo">%</button>
-        <button data-key="/" type="button" class="operator" id="division">/</button>
+        <button data-key="Slash" type="button" class="operator" id="division">/</button>
           <button data-key="Backspace" type="button" class ="del" id="backspace">&larr;</button>
       </div>
       <div class="row"> <!-- row 3 -->
